--- a/.github/workflows/msdo.yml
+++ b/.github/workflows/msdo.yml
@@ -26,7 +26,7 @@ jobs:
         policy: 'microsoft'
       # categories: string. Optional. A comma-separated list of analyzer categories to run. Values: 'secrets', 'code', 'artifacts', 'IaC', 'containers. Example: 'IaC,secrets'. Defaults to all.
       # languages: string. Optional. A comma-separated list of languages to analyze. Example: 'javascript,typescript'. Defaults to all.
-      # tools: string. Optional. A comma-separated list of analyzer tools to run. Values: 'bandit', 'binskim', 'eslint', 'templateanalyzer', 'terrascan', 'trivy'.
+        tools: 'trivy'
 
       # Upload alerts to the Security tab
     - name: Upload alerts to Security tab
